# ArenaAI-Smart-Stadium-Navigator

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  requirements.txt
apps/backend/app/: __init__.py  auth.py  config.py  constants.py  database.py  exceptions.py  limiter.py  logging_config.py  main.py  models.py  schemas.py  telemetry.py
apps/backend/app/ai/: __init__.py  crowd_agent.py  fallback.py  fan_agent.py  filters.py  gemini_client.py  incident_agent.py  orchestrator.py
apps/backend/app/middleware/: __init__.py  correlation.py  request_size.py  security_headers.py
apps/backend/app/routers/: __init__.py  auth.py  broadcast.py  fan.py  incidents.py  ws.py  zones.py
apps/backend/scripts/: seed.py
apps/backend/tests/: conftest.py  test_ai_agents.py  test_ai_filters.py  test_auth.py  test_auth_rbac.py  test_broadcast.py  test_config.py  test_coverage_boost.py  test_domain_guardrails.py  test_health.py  test_incidents.py  test_security_headers.py  test_telemetry.py  test_ws.py  test_zones.py
apps/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/frontend/src/: App.jsx  AuthContext.jsx  AuthCtx.js  AuthPage.jsx  api.js  constants.js  index.css
apps/frontend/src/__tests__/: App.test.jsx  ErrorBoundary.test.jsx  api.test.js  colorMap.test.js  mockRecharts.js
apps/frontend/src/components/: AIPanel.jsx  BroadcastPanel.jsx  ChatBubble.jsx  CommandCenter.jsx  DensityChart.jsx  ErrorBoundary.jsx  FanPortal.jsx  IncidentQueue.jsx  KPIBar.jsx  StadiumMap.jsx
apps/frontend/src/hooks/: useAuth.js
apps/frontend/src/utils/: colorHelpers.js
docs/: index.md
docs/adr/: 001-single-app-architecture.md  002-jwt-sqlite-over-cognito.md  003-rule-based-fallback.md  004-websocket-telemetry.md  README.md
docs/architecture/: overview.md
docs/operations/: runbook.md
docs/security/: threat-model.md
docs/standards/: MASTER_ENGINEERING_STANDARDS.md  standards_accessibility.md  standards_code_quality.md  standards_efficiency.md  standards_problem_alignment.md  standards_security.md  standards_testing.md
