[project]
name = "arenaiq-smart-stadium"
version = "1.0.0"
description = "GenAI-powered stadium operations platform for FIFA World Cup 2026"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["apps/backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # bugbear
    "S",    # bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "D100",   # Missing docstring in public module (handled per-file)
    "D101",   # Missing docstring in class
    "D102",   # Missing docstring in method
    "D103",   # Missing docstring in function
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D213",   # Multi-line docstring summary should start at the second line
    "D400",   # First line should end with a period
    "D401",   # First line of docstring should be in imperative mood
    "D415",   # First line should end with a period, question mark, or exclamation point
    "S101",   # Use of assert detected (needed in tests)
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends)
    "S311",   # Standard pseudo-random generators (used for telemetry simulation)
    "TC002",  # Move third-party import into type-checking block
    "TC003",  # Move standard library import into type-checking block
    "UP042",  # Class UserRole inherits from both str and enum.Enum (compatibility)
    "B904",   # Within an except clause, raise exceptions with raise ... from
    "S105",   # Possible hardcoded password (false positives like token_type)
    "S106",   # Possible hardcoded password assigned to argument
    "S107",   # Possible hardcoded password assigned to default
    "SIM105", # Use contextlib.suppress instead of try-except-pass
    "S110",   # try-except-pass block detected
    "E501",   # Line too long (avoid breaking long translation/prompt lines)
    "SIM103", # Return the negated condition directly
    "D200",   # One-line docstring should fit on one line
    "RUF001", # Ambiguous unicode character
    "RUF002", # Ambiguous unicode character
    "RUF003", # Ambiguous unicode character
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "S101", "T20", "N802", "E402", "E501", "RUF001", "RUF002", "RUF003", "S105", "S106", "N818", "F841"]
"**/tests/*.py" = ["D", "S101", "T20", "N802", "E402", "E501", "RUF001", "RUF002", "RUF003", "S105", "S106", "N818", "F841"]
"**/scripts/**/*.py" = ["D", "T20", "E501", "RUF001", "RUF002", "RUF003"]
"**/scripts/*.py" = ["D", "T20", "E501", "RUF001", "RUF002", "RUF003"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.coverage.run]
source = ["apps/backend/app"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
